aarch64: generate_copy_longs calls align() incorrectly

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b107
    • aarch64
    • linux

        In method StubGenerator::generate_copy_longs(...) there are statements of the form

         __ align(6)

        The intention presumably being to align the code buffer on a 64 byte boundary, however the implementation of align(...) does

        void MacroAssembler::align(int modulus) {
          while (offset() % modulus != 0) nop();
        }

              Assignee:
              Ed Nevill
              Reporter:
              Ed Nevill
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: