8148948: aarch64: generate_copy_longs calls align() incorrectly

Fix alignments

Reviewed-by: aph